--- a/client/src/index.html
+++ b/client/src/index.html
@@ -15,6 +15,8 @@
   <meta charset="utf-8">
   <title>nestris.org</title>
   <base href="/">
+  <meta name="description" content="The ultimate multiplayer twist to the classic block stacker game. Match against random players, practice puzzles, and climb the leaderboard.">
+  <meta name="author" content="Ansel Chang">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="Cache-control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="Pragma" content="no-cache">
