--- a/client/src/index.html
+++ b/client/src/index.html
@@ -20,10 +20,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="Cache-control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="Pragma" content="no-cache">
-  <link rel="icon" type="image/x-icon" href="./assets/img/icon.svg?">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+
+  <link rel="icon" type="image/png" href="./assets/img/favicon/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="./assets/img/favicon/favicon.svg" />
+  <link rel="shortcut icon" href="./assets/img/favicon/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/favicon/apple-touch-icon.png" />
+  <link rel="manifest" href="./assets/img/favicon/site.webmanifest" />
 </head>
 <body>
 
